@@ -6,11 +6,11 @@ import androidx.compose.foundation.clickable
 import androidx.compose.foundation.layout.*
 import androidx.compose.foundation.shape.CircleShape
 import androidx.compose.foundation.shape.RoundedCornerShape
+import androidx.compose.material.Icon
+import androidx.compose.material.Text
 import androidx.compose.material.icons.Icons
 import androidx.compose.material.icons.filled.ArrowBack
 import androidx.compose.material.icons.filled.SupervisedUserCircle
-import androidx.compose.material.Icon
-import androidx.compose.material.Text
 import androidx.compose.runtime.Composable
 import androidx.compose.ui.Alignment
 import androidx.compose.ui.Modifier
@@ -29,7 +29,10 @@ import java.text.SimpleDateFormat
 @Composable
 fun DetailsPage(navController: NavController, viewModel: MainViewModel) {
 
-    Column(modifier = Modifier.background(Color.White).fillMaxSize().padding(all = 20.dp)) {
+    Column(modifier = Modifier
+        .background(Color.White)
+        .fillMaxSize()
+        .padding(all = 20.dp)) {
         Box(modifier = Modifier
             .background(Color(0xffDAE3DD), shape = RoundedCornerShape(100))
             .size(50.dp)
@@ -44,7 +47,8 @@ fun DetailsPage(navController: NavController, viewModel: MainViewModel) {
                 modifier = Modifier
                     .size(25.dp)
                     .align(
-                        Alignment.Center))
+                        Alignment.Center
+                    ))
         }
 
         Spacer(modifier = Modifier.height(30.dp))
@@ -69,10 +73,11 @@ fun DetailsPage(navController: NavController, viewModel: MainViewModel) {
 
             Spacer(modifier = Modifier.height(50.dp))
 
-            Column(Modifier
-                .fillMaxWidth()
-                .background(color = Color(0xffEAF0EC), shape = RoundedCornerShape(10.dp))
-                .padding(all = 15.dp))  {
+            Column(
+                Modifier
+                    .fillMaxWidth()
+                    .background(color = Color(0xffEAF0EC), shape = RoundedCornerShape(10.dp))
+                    .padding(all = 15.dp))  {
 
                 Text(text = viewModel.detailData.name, fontWeight = FontWeight.SemiBold)
                 Spacer(modifier = Modifier.height(15.dp))
@@ -85,13 +90,13 @@ fun DetailsPage(navController: NavController, viewModel: MainViewModel) {
 
         }
 
-}
+    }
 }
 
 fun formattedDateTime(createdAt: String): String {
     val parser =  SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'")
     val formatter = SimpleDateFormat("MM-dd-yy HH:ss")
-    return formatter.format(parser.parse(createdAt)!!)
+    return formatter.format(parser.parse(createdAt))
 }
 
 @Composable
@@ -103,7 +108,7 @@ fun seePreview() {
             .padding(all = 40.dp)
             .align(Alignment.Start)
             .clickable {
-              //  navController.popBackStack()
+                //  navController.popBackStack()
 
             }) {
             Icon(Icons.Filled.ArrowBack,
@@ -112,7 +117,8 @@ fun seePreview() {
                 modifier = Modifier
                     .size(25.dp)
                     .align(
-                        Alignment.Center))
+                        Alignment.Center
+                    ))
         }
 
         Column(modifier = Modifier
@@ -125,10 +131,11 @@ fun seePreview() {
 
             Spacer(modifier = Modifier.height(50.dp))
 
-            Column(Modifier
-                .fillMaxWidth()
-                .padding(start = 10.dp, top = 10.dp, end = 10.dp)
-                .background(color = Color(0xffEAF0EC), shape = RoundedCornerShape(10.dp)))  {
+            Column(
+                Modifier
+                    .fillMaxWidth()
+                    .padding(start = 10.dp, top = 10.dp, end = 10.dp)
+                    .background(color = Color(0xffEAF0EC), shape = RoundedCornerShape(10.dp)))  {
 
                 Text(text = "Name", fontWeight = FontWeight.SemiBold)
                 Spacer(modifier = Modifier.height(15.dp))
